--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -78,7 +78,12 @@
         "content/features/index.js",
         "content/features/text-collapse.js",
         "content/features/code-preview.js",
-        "content/features/keyword-highlighting.js"
+        "content/features/keyword-highlighting.js",
+        "content/features/reading-mask.js",
+        "content/features/collapsible-sections.js",
+        "content/features/layout-trim.js",
+        "content/features/navigation-aids.js",
+        "content/features/dyslexia-mode.js"
       ],
       "matches": ["<all_urls>"]
     }
